check in validation and css autoprefixer

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 	<section class="section2">
 		<div class="bg">
 			<div class="left-text">
-			<h4>things aren't always</h4>
-			<h4>#000000</h4>
-			<h4>or #ffffff</h4>
-		</div>
-		<div class="html-right">
-			<h1>< / html ></h1>
+				<h4>things aren't always</h4>
+				<h4>#000000</h4>
+				<h4>or #ffffff</h4>
+			</div>
+			<div class="html-right">
+				<h1>html</h1>
+			</div>
 		</div>		
 	</section>
 
@@ -69,19 +70,19 @@
 
 	<section class="section4">
 		<div class="ph">
-			<img src="img/ph1.jpg">
+			<img src="img/ph1.jpg" alt="Typography">
 			<p class="p2">Typography Lab</p>
 		</div>
 		<div class="ph">
-			<img src="img/ph2.jpg">
+			<img src="img/ph2.jpg" alt="computer">
 			<p class="p2">Online Marketing</p>
 		</div>
 		<div class="ph">
-			<img src="img/ph3.jpg">
+			<img src="img/ph3.jpg" alt="pharaon">
 			<p class="p2">C# coding</p>
 		</div>
 		<div class="ph1">
-			<img src="img/ph4.jpg">
+			<img src="img/ph4.jpg" alt="design">
 			<p class="p2">Interface Design</p>
 		</div>
 	</section>
@@ -117,7 +118,6 @@
 		<div class="bottom2">
 			<p class="p9">created by: ME</p>
 		</div>
-	</section>
 	</section>
 
 </body>
