--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>davaleba10</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="icon" type="photo/png" href="img/icon.png">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -55,7 +56,9 @@
 			<p class="text-video">Videos | view all videos</p>
 		</div>
 		<div class="two-white-boxes">
-			<div class="white-box1">
+			<iframe class="video1" src="https://www.youtube.com/embed/OOy764mDtiA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe class="video2" src="https://www.youtube.com/embed/zHUpx90NerM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<!-- <div class="white-box1">
 				<div class="p1">
 				<p class="txt">EMBEDED YOUTUBE VIDEO GOES HERE</p>
 				</div>
@@ -64,7 +67,7 @@
 				<div class="p1">
 				<p class="txt">EMBEDED YOUTUBE VIDEO GOES HERE</p>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</section>
 
